@@ -455,7 +455,7 @@ DECL|enum constant|SORTED
 name|SORTED
 block|}
 empty_stmt|;
-comment|/**    * Creates a new<tt>byte[]</tt> {@link Writer} instances for the given    * directory.    *     * @param dir    *          the directory to write the values to    * @param id    *          the id used to create a unique file name. Usually composed out of    *          the segment name and a unique id per segment.    * @param mode    *          the writers store mode    * @param fixedSize    *<code>true</code> if all bytes subsequently passed to the    *          {@link Writer} will have the same length    * @param sortComparator {@link BytesRef} comparator used by sorted variants.     *        If<code>null</code> {@link BytesRef#getUTF8SortedAsUnicodeComparator()}    *        is used instead    * @param bytesUsed    *          an {@link AtomicLong} instance to track the used bytes within the    *          {@link Writer}. A call to {@link Writer#finish(int)} will release    *          all internally used resources and frees the memory tracking    *          reference.    * @param context     * @return a new {@link Writer} instance    * @throws IOException    *           if the files for the writer can not be created.    */
+comment|/**    * Creates a new<tt>byte[]</tt> {@link Writer} instances for the given    * directory.    *     * @param dir    *          the directory to write the values to    * @param id    *          the id used to create a unique file name. Usually composed out of    *          the segment name and a unique id per segment.    * @param mode    *          the writers store mode    * @param fixedSize    *<code>true</code> if all bytes subsequently passed to the    *          {@link Writer} will have the same length    * @param sortComparator {@link BytesRef} comparator used by sorted variants.     *        If<code>null</code> {@link BytesRef#getUTF8SortedAsUnicodeComparator()}    *        is used instead    * @param bytesUsed    *          an {@link AtomicLong} instance to track the used bytes within the    *          {@link Writer}. A call to {@link Writer#finish(int)} will release    *          all internally used resources and frees the memory tracking    *          reference.    * @param fasterButMoreRam whether packed ints for docvalues should be optimized for speed by rounding up the bytes    *                         used for a value to either 8, 16, 32 or 64 bytes. This option is only applicable for    *                         docvalues of type {@link Type#BYTES_FIXED_SORTED} and {@link Type#BYTES_VAR_SORTED}.    * @param context I/O Context    * @return a new {@link Writer} instance    * @throws IOException    *           if the files for the writer can not be created.    */
 DECL|method|getWriter
 specifier|public
 specifier|static
@@ -485,6 +485,9 @@ name|bytesUsed
 parameter_list|,
 name|IOContext
 name|context
+parameter_list|,
+name|boolean
+name|fasterButMoreRam
 parameter_list|)
 throws|throws
 name|IOException
@@ -587,6 +590,8 @@ argument_list|,
 name|bytesUsed
 argument_list|,
 name|context
+argument_list|,
+name|fasterButMoreRam
 argument_list|)
 return|;
 block|}
@@ -669,6 +674,8 @@ argument_list|,
 name|bytesUsed
 argument_list|,
 name|context
+argument_list|,
+name|fasterButMoreRam
 argument_list|)
 return|;
 block|}
@@ -1813,6 +1820,12 @@ specifier|final
 name|BytesRefHash
 name|hash
 decl_stmt|;
+DECL|field|fasterButMoreRam
+specifier|protected
+specifier|final
+name|boolean
+name|fasterButMoreRam
+decl_stmt|;
 DECL|field|maxBytes
 specifier|protected
 name|long
@@ -1868,6 +1881,64 @@ argument_list|,
 name|bytesUsed
 argument_list|,
 name|context
+argument_list|,
+literal|false
+argument_list|)
+expr_stmt|;
+block|}
+DECL|method|DerefBytesWriterBase
+specifier|protected
+name|DerefBytesWriterBase
+parameter_list|(
+name|Directory
+name|dir
+parameter_list|,
+name|String
+name|id
+parameter_list|,
+name|String
+name|codecName
+parameter_list|,
+name|int
+name|codecVersion
+parameter_list|,
+name|Counter
+name|bytesUsed
+parameter_list|,
+name|IOContext
+name|context
+parameter_list|,
+name|boolean
+name|fasterButMoreRam
+parameter_list|)
+throws|throws
+name|IOException
+block|{
+name|this
+argument_list|(
+name|dir
+argument_list|,
+name|id
+argument_list|,
+name|codecName
+argument_list|,
+name|codecVersion
+argument_list|,
+operator|new
+name|DirectTrackingAllocator
+argument_list|(
+name|ByteBlockPool
+operator|.
+name|BYTE_BLOCK_SIZE
+argument_list|,
+name|bytesUsed
+argument_list|)
+argument_list|,
+name|bytesUsed
+argument_list|,
+name|context
+argument_list|,
+name|fasterButMoreRam
 argument_list|)
 expr_stmt|;
 block|}
@@ -1895,6 +1966,9 @@ name|bytesUsed
 parameter_list|,
 name|IOContext
 name|context
+parameter_list|,
+name|boolean
+name|fasterButMoreRam
 parameter_list|)
 throws|throws
 name|IOException
@@ -1956,6 +2030,12 @@ name|RamUsageEstimator
 operator|.
 name|NUM_BYTES_INT
 argument_list|)
+expr_stmt|;
+name|this
+operator|.
+name|fasterButMoreRam
+operator|=
+name|fasterButMoreRam
 expr_stmt|;
 block|}
 DECL|method|writePrefixLength
@@ -2500,8 +2580,6 @@ name|idxOut
 argument_list|,
 name|docCount
 argument_list|,
-name|PackedInts
-operator|.
 name|bitsRequired
 argument_list|(
 name|maxValue
@@ -2686,8 +2764,6 @@ name|idxOut
 argument_list|,
 name|docCount
 argument_list|,
-name|PackedInts
-operator|.
 name|bitsRequired
 argument_list|(
 name|maxValue
@@ -2832,6 +2908,38 @@ operator|.
 name|finish
 argument_list|()
 expr_stmt|;
+block|}
+DECL|method|bitsRequired
+specifier|protected
+name|int
+name|bitsRequired
+parameter_list|(
+name|long
+name|maxValue
+parameter_list|)
+block|{
+return|return
+name|fasterButMoreRam
+condition|?
+name|PackedInts
+operator|.
+name|getNextFixedSize
+argument_list|(
+name|PackedInts
+operator|.
+name|bitsRequired
+argument_list|(
+name|maxValue
+argument_list|)
+argument_list|)
+else|:
+name|PackedInts
+operator|.
+name|bitsRequired
+argument_list|(
+name|maxValue
+argument_list|)
+return|;
 block|}
 block|}
 DECL|class|BytesSortedSourceBase
