@@ -409,6 +409,9 @@ name|bytesUsed
 parameter_list|,
 name|IOContext
 name|context
+parameter_list|,
+name|boolean
+name|fasterButMoreRam
 parameter_list|)
 throws|throws
 name|IOException
@@ -426,6 +429,8 @@ argument_list|,
 name|bytesUsed
 argument_list|,
 name|context
+argument_list|,
+name|fasterButMoreRam
 argument_list|)
 expr_stmt|;
 name|this
