@@ -427,7 +427,7 @@ expr_stmt|;
 block|}
 block|}
 block|}
-comment|/**    * Factory method to create a {@link Writer} instance for a given type. This    * method returns default implementations for each of the different types    * defined in the {@link Type} enumeration.    *     * @param type    *          the {@link Type} to create the {@link Writer} for    * @param id    *          the file name id used to create files within the writer.    * @param directory    *          the {@link Directory} to create the files from.    * @param bytesUsed    *          a byte-usage tracking reference    * @return a new {@link Writer} instance for the given {@link Type}    * @throws IOException    */
+comment|/**    * Factory method to create a {@link Writer} instance for a given type. This    * method returns default implementations for each of the different types    * defined in the {@link Type} enumeration.    *     * @param type    *          the {@link Type} to create the {@link Writer} for    * @param id    *          the file name id used to create files within the writer.    * @param directory    *          the {@link Directory} to create the files from.    * @param bytesUsed    *          a byte-usage tracking reference    * @param fasterButMoreRam Whether the space used for packed ints should be rounded up for higher lookup performance.    *                         Currently this parameter only applies for types {@link Type#BYTES_VAR_SORTED}    *                         and {@link Type#BYTES_FIXED_SORTED}.    * @return a new {@link Writer} instance for the given {@link Type}    * @throws IOException    */
 DECL|method|create
 specifier|public
 specifier|static
@@ -454,6 +454,9 @@ name|bytesUsed
 parameter_list|,
 name|IOContext
 name|context
+parameter_list|,
+name|boolean
+name|fasterButMoreRam
 parameter_list|)
 throws|throws
 name|IOException
@@ -572,6 +575,8 @@ argument_list|,
 name|bytesUsed
 argument_list|,
 name|context
+argument_list|,
+name|fasterButMoreRam
 argument_list|)
 return|;
 case|case
@@ -599,6 +604,8 @@ argument_list|,
 name|bytesUsed
 argument_list|,
 name|context
+argument_list|,
+name|fasterButMoreRam
 argument_list|)
 return|;
 case|case
@@ -626,6 +633,8 @@ argument_list|,
 name|bytesUsed
 argument_list|,
 name|context
+argument_list|,
+name|fasterButMoreRam
 argument_list|)
 return|;
 case|case
@@ -653,6 +662,8 @@ argument_list|,
 name|bytesUsed
 argument_list|,
 name|context
+argument_list|,
+name|fasterButMoreRam
 argument_list|)
 return|;
 case|case
@@ -680,6 +691,8 @@ argument_list|,
 name|bytesUsed
 argument_list|,
 name|context
+argument_list|,
+name|fasterButMoreRam
 argument_list|)
 return|;
 case|case
@@ -707,6 +720,8 @@ argument_list|,
 name|bytesUsed
 argument_list|,
 name|context
+argument_list|,
+name|fasterButMoreRam
 argument_list|)
 return|;
 default|default:
